added header and skills, fonts and colors styles

--- a/index.html
+++ b/index.html
@@ -4,11 +4,82 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.typekit.net/mif6fss.css">
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <title>Fern Codes</title>
 </head>
 <body>
 
-    <h1>Fern Codes</h1>
+    <header>
+        <div class="wrapper">
+            <div class="top-bar">
+                <div class="logo">
+                    { fern codes }
+                </div>
+            </div>
+                <div class="content">
+                    <h5>Hi <span class="lnr lnr-hand" aria-hidden="true"></span> I'm Fern!</h5>
+                    <h1>A front-end developer in Toronto</h1>
+                    <h2>with experience in graphic design and marketing</h2>
+                </div>
+        </div>
+    </header>
+
+    <main>
+        <section class="about">
+            <div class="wrapper">
+                <div class="left">
+                    <div class="name">
+                        <p><strong>Fernanda Thiesen</strong> — Web Developer</p>
+                    </div>
+                    <img src="./assets/fthiesen.jpg" alt="A photo of Fernanda Thiesen">
+                </div>
+                <div class="right">
+                    <h3>About me</h3>
+                    <h2>Title goes here</h2>
+                    <p>A front-end developer who uses her curious mind, attention to detail and persistence to innovate and solve problems in order to build intuitive and accessible websites and applications.</p>
+                    <p>With 20 years of experience in working as a graphic design and marketing freelancer, I am looking  to explore new opportunities that help me grow as a developer.</p>
+                    <p>My background includes a Bachelor’s Degree in Social Communications and Marketing, and a technical school certificate in Advertising, having won student awards for Printing and Copywriting.</p>
+                </div>
+            </div>
+        </section>
+        <section class="skills">
+            <h3>Skills & Portfolio</h3>
+            <img src="./assets/html-5.svg" alt="HTML logo">
+            <img src="./assets/css-3.svg" alt="CSS logo">
+            <img src="./assets/sass.svg" alt="Sass logo">
+            <img src="./assets/javascript.svg" alt="JavaScript logo">
+            <img src="./assets/jquery.svg" alt="jQuery logo" class="landscape">
+            <img src="./assets/react.svg" alt="React logo">
+            <img src="./assets/firebase.svg" alt="Firebase logo">
+            <img src="./assets/github-icon.svg" alt="Github logo">
+        </section>
+        <section class="portfolio">
+            <div class="wrapper">
+                <div class="left">
+                    <h3>HTML, Sass, JS, React, Firebase</h3>
+                    <h2>Popsipoll</h2>
+                    An app built with React and Firebase where you can create your own poll and then share the link with anyone you’d like to take part in the poll.
+                </div>
+                <div class="right">
+                    <p></p>
+                </div>
+            </div>
+        </section>
+        <section class="education">
+            <div class="wrapper">
+                <h2>Education</h2>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam expedita harum nostrum ea, obcaecati repudiandae eius nihil consequatur voluptatem earum id neque dolorum beatae dicta autem accusantium placeat mollitia doloremque?
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2020-<span class="current-year">2021</span> - Fernanda Thiesen</p>
+    </footer>
     
+    <script src="script.js"></script>
 </body>
 </html>
