finished media queries

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="right">
                     <h2 class="subtitle">About me</h2>
                     <h3 class="title">A Juno College Bootcamp graduate</h3>
-                    <p>A front-end developer who uses her curious mind, attention to detail and persistence to innovate and solve problems in order to build intuitive and accessible websites and applications.</p>
+                    <p>I use curious mind, attention to detail and persistence to innovate and solve problems in order to build intuitive and accessible websites and applications.</p>
                     <p>With 20 years of experience in working as a graphic design and marketing freelancer, I am looking  to explore new opportunities that can help me grow as a developer.</p>
                     <p>My background includes a Bachelor’s Degree in Social Communications and Marketing, and a technical school certificate in Advertising, having won student awards for Printing and Copywriting.</p>
                 </div>
@@ -66,7 +66,7 @@
                     <div class="left">
                         <h3 class="subtitle">HTML, Sass, JS, React, Firebase</h3>
                         <h2 class="title">Popsipoll</h2>
-                        <p>An app built with React and Firebase where you can create your own poll and then share the link with anyone you’d like to take part in the poll.</p>
+                        <p>An app built with React and Firebase where you can create your own poll and then share the link with anyone you’d like to take part in the poll. A group project developed by me, <a href="https://camduffin.com/">Cam</a>, <a href="https://jakeisbaek.com/">Jake</a> and <a href="https://melissalocquiao.com/">Melissa</a>.</p>
                         <p><a href="https://popsipoll.netlify.app/" class="btn">Live project</a><a href="https://github.com/Cam-Fernanda-Melissa-Jake-Project4/popsipoll" class="btn">GitHub</a></p>
                     </div>
                     <div class="right">
@@ -92,7 +92,7 @@
                     <div class="left">
                         <h3 class="subtitle">HTML, Sass, JS, API</h3>
                         <h2 class="title">Amazed by TV</h2>
-                        <p>Amazed by TV is a one-page website created with JavaScript that connects to the TV Maze API and displays information about a chosen TV show. </p>
+                        <p>Amazed by TV is a one-page website created with JavaScript that connects to the TV Maze API and displays information about a chosen TV show. Pair programmed with <a href="https://blairecodes.com/">Blaire</a>.</p>
                         <p><a href="https://blaire-fernanda.github.io/amazed-by-tv/" class="btn">Live project</a><a href="https://github.com/blaire-fernanda/amazed-by-tv" class="btn">GitHub</a></p>
                     </div>
                     <div class="right">
