removed some animations

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
         </section>
-        <section class="skills" data-aos="fade-in" data-aos-duration="1000" data-aos-easing="ease-in-out">
+        <section class="skills">
             <div class="wrapper">
                 <h2 class="subtitle">Skills & Portfolio</h2>
                 <div class="skill">
@@ -91,8 +91,7 @@
             </div>
         </section>
         <section class="portfolio">
-            <div class="project" data-aos="fade-left" data-aos-duration="500"
-            data-aos-easing="ease-in-out">
+            <div class="project">
                 <div class="wrapper">
                     <div class="left">
                         <h3 class="subtitle">HTML, Sass, JS, React, Firebase</h3>
@@ -105,8 +104,7 @@
                     </div>
                 </div>
             </div>
-            <div class="project" data-aos="fade-right" data-aos-duration="500"
-            data-aos-easing="ease-in-out">
+            <div class="project">
                 <div class="wrapper">
                     <div class="left">
                         <img src="./assets/projects/must-watch.png" alt="Screenshot of the Must Watch project">
@@ -119,8 +117,7 @@
                     </div>
                 </div>
             </div>
-            <div class="project" data-aos="fade-left" data-aos-duration="500"
-            data-aos-easing="ease-in-out">
+            <div class="project">
                 <div class="wrapper">
                     <div class="left">
                         <h3 class="subtitle">HTML, Sass, JS, API</h3>
@@ -133,8 +130,7 @@
                     </div>
                 </div>
             </div>
-            <div class="project" data-aos="fade-right" data-aos-duration="500"
-            data-aos-easing="ease-in-out">
+            <div class="project">
                 <div class="wrapper">
                     <div class="left">
                         <img src="./assets/projects/lotr-quotes.png" alt="Screenshot of the Lord of the Rings Quotes project">
@@ -148,7 +144,7 @@
                 </div>
             </div>
         </section>
-        <section class="education" data-aos="fade-in" data-aos-duration="1000" data-aos-easing="ease-in-out">
+        <section class="education">
             <div class="wrapper">
                 <h2 class="subtitle">Education</h2>
                 <h3 class="title">Juno College Certificate (2020-2021)</h3>
@@ -163,7 +159,7 @@
                 <p>ETEC - Escola Técnica de Comunicação, Brazil</p>
             </div>
         </section>
-        <section class="contact" id="contact" data-aos="fade-in" data-aos-duration="1000" data-aos-easing="ease-in-out">
+        <section class="contact" id="contact">
             <div class="wrapper">
                 <h2 class="subtitle">Contact</h2>
                 <h3 class="title">Get in touch</h3>
