updated resume and added text and calendly to contact section

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 </div>
                 <div class="right">
                     <h2 class="subtitle">About me</h2>
-                    <h3 class="title">A Juno College Bootcamp graduate</h3>
-                    <p>I use my curious mind, attention to detail and persistence to innovate and solve problems in order to build intuitive and accessible websites and applications.</p>
-                    <p>With 20 years of experience in working as a graphic design and marketing freelancer, I am looking  to explore new opportunities that can help me grow as a developer.</p>
-                    <p>My background includes a Bachelor’s Degree in Social Communications and Marketing, and a technical school certificate in Advertising, having won student awards for Printing and Copywriting.</p>
+                    <h3 class="title">Independent and self-starter</h3>
+                    <p>A front-end developer who uses her curious mind, attention to detail and persistence to innovate and solve problems in order to build intuitive and accessible websites and applications. </p>
+                    <p>With 20 years of experience in working as a graphic design and marketing freelancer, I bring the ability to critically evaluate information, make decisions, accept criticism and feedback, and work effectively with people.</p> 
+                    <p>I am looking to explore new opportunities that help me grow as a developer.</p>
                 </div>
             </div>
         </section>
@@ -182,8 +182,11 @@
         <section class="contact" id="contact">
             <div class="wrapper">
                 <h2 class="subtitle">Contact</h2>
-                <h3 class="title">Get in touch</h3>
+                <h3 class="title">Let's chat!</h3>
                 <div class="left">
+                    <p>Do you have any questions about my work, think I could be a good fit for a position or would like to collab in a project?</p>
+                    <p>I would love to talk with you!</p>
+                    <p> You can send me a message or book a virtual meeting on my <a href="https://calendly.com/fcthiesen/virtual-meeting" target="_blank">Calendly</a>.</p>
                     <p><a href="mailto:fcthiesen@gmail.com">fcthiesen@gmail.com</a></p>
                     <ul>
                         <li><a href="https://github.com/fthiesen/" target="_blank">
@@ -194,6 +197,9 @@
                         </a></li>
                         <li><a href="https://twitter.com/fcthiesen" target="_blank">
                             <svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>Twitter</title><path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"/></svg>
+                        </a></li>
+                        <li><a href="https://calendly.com/fcthiesen/virtual-meeting" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg"viewBox="0 0 361.77 361.77"><title>Calendly</title><g><path d="M323.885,43.77h-27.5V25c0-13.807-11.193-25-25-25h-1c-13.807,0-25,11.193-25,25v18.77h-129V25c0-13.807-11.193-25-25-25 h-1c-13.807,0-25,11.193-25,25v18.77h-27.5c-13.807,0-25,11.193-25,25v268c0,13.809,11.193,25,25,25h286 c13.807,0,25-11.191,25-25v-268C348.885,54.963,337.691,43.77,323.885,43.77z M306.885,322.27h-252v-203h252V322.27z"/><path d="M89.136,211.134h43.498c2.209,0,4-1.791,4-4v-43.498c0-2.209-1.791-4-4-4H89.136c-2.209,0-4,1.791-4,4v43.498 C85.136,209.343,86.927,211.134,89.136,211.134z"/><path d="M159.136,211.134h43.498c2.209,0,4-1.791,4-4v-43.498c0-2.209-1.791-4-4-4h-43.498c-2.209,0-4,1.791-4,4v43.498 C155.136,209.343,156.927,211.134,159.136,211.134z"/><path d="M229.136,211.134h43.498c2.209,0,4-1.791,4-4v-43.498c0-2.209-1.791-4-4-4h-43.498c-2.209,0-4,1.791-4,4v43.498 C225.136,209.343,226.927,211.134,229.136,211.134z"/><path d="M89.136,281.134h43.498c2.209,0,4-1.791,4-4v-43.498c0-2.209-1.791-4-4-4H89.136c-2.209,0-4,1.791-4,4v43.498 C85.136,279.343,86.927,281.134,89.136,281.134z"/><path d="M159.136,281.134h43.498c2.209,0,4-1.791,4-4v-43.498c0-2.209-1.791-4-4-4h-43.498c-2.209,0-4,1.791-4,4v43.498 C155.136,279.343,156.927,281.134,159.136,281.134z"/><path d="M229.136,281.134h43.498c2.209,0,4-1.791,4-4v-43.498c0-2.209-1.791-4-4-4h-43.498c-2.209,0-4,1.791-4,4v43.498 C225.136,279.343,226.927,281.134,229.136,281.134z"/></g></svg>
                         </a></li>
                     </ul>
                     <a href="./assets/fernanda-thiesen-resume.pdf" class="btn">Download Resume (PDF)</a>
