added supplements calculator and hangry tummy projects

--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
                 </div>
                 <div class="right">
                     <h2 class="subtitle">About me</h2>
-                    <h3 class="title">Independent and self-starter</h3>
-                    <p>A front-end developer who uses her curious mind, attention to detail and persistence to innovate and solve problems in order to build intuitive and accessible websites and applications. </p>
-                    <p>With 20 years of experience in working as a graphic design and marketing freelancer, I bring the ability to critically evaluate information, make decisions, accept criticism and feedback, and work effectively with people.</p> 
+                    <h3 class="title">Team player + decision maker + innovator</h3>
+                    <p>An independent self-starter front-end developer who uses her curious mind, attention to detail and persistence to innovate and solve problems in order to build intuitive and accessible websites and applications.</p>
+                    <p>With 20 years of experience in working as a graphic design and marketing freelancer, I bring the ability to critically evaluate information, make decisions, accept criticism and feedback, and work effectively with people.</p>
                     <p>I am looking to explore new opportunities that help me grow as a developer.</p>
+                    <p>You can learn more about my top talents, work style and preferences on my <a href="https://secure.plum.io/p/4o5_E4mx7eIXeMtsCGI3Rw" target="_blank">Plum Profile</a>.</p>
                 </div>
             </div>
         </section>
@@ -160,6 +161,32 @@
                         <h2 class="title">The Lord of the Rings Quotes</h2>
                         <p>A one page website that connects to The One Api and displays quotes from the Lord of The Rings movies.</p>
                         <div class="buttons"><a href="https://fthiesen.github.io/lord-of-the-rings-quotes/" target="_blank" class="btn">Live project</a><a href="https://github.com/fthiesen/lord-of-the-rings-quotes" target="_blank" class="btn">GitHub</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="wrapper">
+                    <div class="left">
+                        <h3 class="subtitle">HTML, CSS, JS, jQuery</h3>
+                        <h2 class="title">Supplements Calculator</h2>
+                        <p>A simple app created with JavaScript and jQuery that allows the user to compare prices of natural supplements.</p>
+                        <div class="buttons"><a href="https://fthiesen.github.io/supplements-calculator/" target="_blank" class="btn">Live project</a><a href="https://github.com/fthiesen/supplements-calculator" target="_blank" class="btn">GitHub</a></div>
+                    </div>
+                    <div class="right">
+                        <img src="./assets/projects/supplements-calc.png" alt="Screenshot of the Supplements Calculator project">
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="wrapper">
+                    <div class="left">
+                        <img src="./assets/projects/hangry-tummy.png" alt="Screenshot of the Hangry Tummy project">
+                    </div>
+                    <div class="right">
+                        <h3 class="subtitle">HTML, CSS</h3>
+                        <h2 class="title">The Hangry Tummy</h2>
+                        <p>A PSD to HTML and CSS conversion project.</p>
+                        <div class="buttons"><a href="https://cdpn.io/ferncodes/debug/xxRxxbK/xnkabmJQQqYM" target="_blank" class="btn">Live project</a><a href="https://codepen.io/ferncodes/pen/xxRxxbK" target="_blank" class="btn">CodePen</a></div>
                     </div>
                 </div>
             </div>
