added boat ride adventures project

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <div class="left">
                         <h3 class="subtitle">HTML, Sass, JS, API</h3>
                         <h2 class="title">Amazed by TV</h2>
-                        <p>Amazed by TV is a one-page website created with JavaScript that connects to the TV Maze API and displays information about a chosen TV show. Pair programmed with <a href="https://blairecodes.com/">Blaire</a>.</p>
+                        <p>Amazed by TV is a one-page website created with JavaScript that connects to the TV Maze API and displays information about a chosen TV show. Pair programmed with <a href="https://blairecodes.com/" target="_blank">Blaire</a>.</p>
                         <div class="buttons"><a href="https://blaire-fernanda.github.io/amazed-by-tv/" target="_blank" class="btn">Live project</a><a href="https://github.com/blaire-fernanda/amazed-by-tv" target="_blank" class="btn">GitHub</a></div>
                     </div>
                     <div class="right">
@@ -187,6 +187,19 @@
                         <h2 class="title">The Hangry Tummy</h2>
                         <p>A PSD to HTML and CSS conversion project.</p>
                         <div class="buttons"><a href="https://cdpn.io/ferncodes/debug/xxRxxbK/xnkabmJQQqYM" target="_blank" class="btn">Live project</a><a href="https://codepen.io/ferncodes/pen/xxRxxbK" target="_blank" class="btn">CodePen</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="wrapper">
+                    <div class="left">
+                        <h3 class="subtitle">HTML, CSS, JS</h3>
+                        <h2 class="title">Boat-Ride Adventures</h2>
+                        <p>A multi-page PSD to HTML and SASS conversion project pair-programmed with <a href="https://www.beatriceduncan.com/" target="_blank">Beatrice Duncan</a> during Juno College's Immersive Bootcamp. It features a mobile menu created with JavaScript.</p>
+                        <div class="buttons"><a href="https://fthiesen.github.io/boat-ride-adventures/" target="_blank" class="btn">Live project</a><a href="https://github.com/fthiesen/boat-ride-adventures" target="_blank" class="btn">GitHub</a></div>
+                    </div>
+                    <div class="right">
+                        <img src="./assets/projects/boat-ride-adventures.png" alt="Screenshot of the Supplements Calculator project">
                     </div>
                 </div>
             </div>
