--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
                     <h4>React</h4>
                 </div>
                 <div class="skill">
+                    <svg role="img" class="graphql" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29.999 30"><title>Graphql logo</title>path d="M4.08 22.864l-1.1-.636L15.248.98l1.1.636z"/><path d="M2.727 20.53h24.538v1.272H2.727z"/><path d="M15.486 28.332L3.213 21.246l.636-1.1 12.273 7.086zm10.662-18.47L13.874 2.777l.636-1.1 12.273 7.086z"/><path d="M3.852 9.858l-.636-1.1L15.5 1.67l.636 1.1z"/><path d="M25.922 22.864l-12.27-21.25 1.1-.636 12.27 21.25zM3.7 7.914h1.272v14.172H3.7zm21.328 0H26.3v14.172h-1.272z"/><path d="M15.27 27.793l-.555-.962 10.675-6.163.555.962z"/><path d="M27.985 22.5a2.68 2.68 0 0 1-3.654.981 2.68 2.68 0 0 1-.981-3.654 2.68 2.68 0 0 1 3.654-.981c1.287.743 1.724 2.375.98 3.654M6.642 10.174a2.68 2.68 0 0 1-3.654.981A2.68 2.68 0 0 1 2.007 7.5a2.68 2.68 0 0 1 3.654-.981 2.68 2.68 0 0 1 .981 3.654M2.015 22.5a2.68 2.68 0 0 1 .981-3.654 2.68 2.68 0 0 1 3.654.981 2.68 2.68 0 0 1-.981 3.654c-1.287.735-2.92.3-3.654-.98m21.343-12.326a2.68 2.68 0 0 1 .981-3.654 2.68 2.68 0 0 1 3.654.981 2.68 2.68 0 0 1-.981 3.654 2.68 2.68 0 0 1-3.654-.981M15 30a2.674 2.674 0 1 1 2.674-2.673A2.68 2.68 0 0 1 15 30m0-24.652a2.67 2.67 0 0 1-2.674-2.674 2.67 2.67 0 1 1 5.347 0A2.67 2.67 0 0 1 15 5.347"/></svg>
+                    <h4>Graphql</h4>
+                </div>
+                <div class="skill">
                     <svg role="img" class="firebase" xmlns="http://www.w3.org/2000/svg" viewBox="51.692 365.523 101.324 139.331"><title>Firebase logo</title><path d="M55.095,456.487l13.773-88.263c0.476-3.008,4.513-3.72,5.938-1.029l14.803,27.706 L55.095,456.487z M153.016,477.94l-13.141-81.297c-0.396-2.533-3.563-3.562-5.383-1.742L51.692,477.94l45.833,25.727 c2.85,1.583,6.412,1.583,9.262,0L153.016,477.94z M115.811,407.013l-10.607-20.186c-1.188-2.295-4.434-2.295-5.62,0l-46.625,83.118 L115.811,407.013z"/></svg>
                     <h4>Firebase</h4>
                 </div>
@@ -186,7 +190,7 @@
                         <h3 class="subtitle">HTML, CSS</h3>
                         <h2 class="title">The Hangry Tummy</h2>
                         <p>A PSD to HTML and CSS conversion project.</p>
-                        <div class="buttons"><a href="https://cdpn.io/ferncodes/debug/xxRxxbK/xnkabmJQQqYM" target="_blank" class="btn">Live project</a><a href="https://codepen.io/ferncodes/pen/xxRxxbK" target="_blank" class="btn">CodePen</a></div>
+                        <div class="buttons"><a href="https://cdpn.io/pen/debug/xxRxxbK?authentication_hash=jVApoNvZxdgr" target="_blank" class="btn">Live project</a><a href="https://codepen.io/ferncodes/pen/xxRxxbK" target="_blank" class="btn">CodePen</a></div>
                     </div>
                 </div>
             </div>
