changed name from fern to fe and updated lord of the rings project description

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
-    <title>Fern Codes</title>
+    <title>Fê Codes</title>
 </head>
 <body>
 
@@ -18,12 +18,12 @@
             <div class="top-bar" data-aos="fade-down" data-aos-duration="500"
             data-aos-easing="ease-in-out">
                 <div class="logo">
-                    { fern codes }
+                    { fê codes }
                 </div>
             </div>
                 <div class="content" data-aos="fade-up" data-aos-duration="500"
                 data-aos-easing="ease-in-out">
-                    <h5>Hi <span class="lnr lnr-hand" aria-hidden="true"></span> I'm Fern!</h5>
+                    <h5>Hi <span class="lnr lnr-hand" aria-hidden="true"></span> I'm Fê!</h5>
                     <h1>A front-end developer in Toronto</h1>
                     <h2>with experience in graphic design and marketing</h2>
                     <div class="buttons">
@@ -163,7 +163,7 @@
                     <div class="right">
                         <h3 class="subtitle">HTML, CSS, JS, API</h3>
                         <h2 class="title">The Lord of the Rings Quotes</h2>
-                        <p>A one page website that connects to The One Api and displays quotes from the Lord of The Rings movies.</p>
+                        <p>A one page website that connects to The One Api and displays quotes from the Lord of The Rings movies. The logo was built with the Ringbearer font and CSS!</p>
                         <div class="buttons"><a href="https://fthiesen.github.io/lord-of-the-rings-quotes/" target="_blank" class="btn">Live project</a><a href="https://github.com/fthiesen/lord-of-the-rings-quotes" target="_blank" class="btn">GitHub</a></div>
                     </div>
                 </div>
