changed lord of the rings project description

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <div class="right">
                         <h3 class="subtitle">HTML, CSS, JS, API</h3>
                         <h2 class="title">The Lord of the Rings Quotes</h2>
-                        <p>A one page website that connects to The One Api and displays quotes from the Lord of The Rings movies. The logo was built with the Ringbearer font and CSS!</p>
+                        <p>A one page website that connects to The One Api and displays quotes from the Lord of The Rings movies. The logo was built with the Ringbearer font and CSS, and it adjusts to fit smaller screens!</p>
                         <div class="buttons"><a href="https://fthiesen.github.io/lord-of-the-rings-quotes/" target="_blank" class="btn">Live project</a><a href="https://github.com/fthiesen/lord-of-the-rings-quotes" target="_blank" class="btn">GitHub</a></div>
                     </div>
                 </div>
